--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-Do List</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"/>
 </head>
 
 <body>
@@ -14,13 +15,10 @@
         <div class="todo-app">
             <h1>TO-DO LIST <img src="to-do-list.png" alt="to-do-icon" height="100"></h1>
             <div class="row">
-                <input id="input-box" type="text" placeholder="Add Your Text">
-                <button onclick = "addTask()">Add</button>
+                <input id="input-box" type="text"  placeholder=" Add Your Text">
+                <button onclick="addTask()">Add</button>
             </div>
             <ul id="list-container">
-                <!-- <li class = "checked">Task 1</li>
-                <li>Task 2</li>
-                <li>Task 3</li> -->
             </ul>
         </div>
     </div>
