--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="todo-app">
             <h1>TO-DO LIST <img src="to-do-list.png" alt="to-do-icon" height="100"></h1>
             <div class="row">
-                <input id="input-box" type="text" placeholder=" Add Your Text">
+                <input id="input-box" type="text" placeholder=" Add a new task..">
                 <button onclick="addTask()">Add</button>
             </div>
             <ul id="list-container">
